Bug Fixes - Line & Overflow

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -101,7 +101,7 @@ a {
   background-color: black;
   width: 50%;
   height: 2px;
-  margin-top: 20px;
+  margin-top: 2.5%;
 }
 
 .map {
